--- a/mosquitto/config/mosquitto.conf
+++ b/mosquitto/config/mosquitto.conf
@@ -3,4 +3,4 @@ allow_anonymous true
 listener 1883
 persistence true
 persistence_location /mosquitto/data
-#log_dest file /mosquitto/log/mosquitto.log
+log_dest file /mosquitto/log/mosquitto.log
